Remove x265 support for now.
It was broken and not working. Also replaced Ansible command module
with shell in order to load environment variables properly.

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -31,46 +31,46 @@
     # dependent libraries
     # libx265
     - name: clone libx265
-      command: hg clone https://bitbucket.org/multicoreware/x265 /usr/src/x265
+      shell: hg clone https://bitbucket.org/multicoreware/x265 /usr/src/x265
       args:
           creates: /usr/src/x265
     - name: configure libx265
-      command: cmake -G "Unix Makefiles" -DCMAKE_INSTALL_PREFIX=/usr/local -DENABLED_SHARED:bool=off ../../source
+      shell: cmake -G "Unix Makefiles" -DCMAKE_INSTALL_PREFIX=/usr/local -DENABLED_SHARED:bool=off ../../source
       args:
           chdir: /usr/src/x265/build/linux
           creates: /usr/src/x265/build/linux/Makefile
     - name: compile libx265
-      command: make -j2
+      shell: make -j2
       args:
           chdir: /usr/src/x265/build/linux
           creates: /usr/src/x265/build/linux/x265
     - name: install libx265
-      command: make install
+      shell: make install
       args:
           chdir: /usr/src/x265/build/linux
           creates: /usr/local/bin/x265
     # libfdk-aac
     - name: clone libfdk-aac
-      command: git clone https://github.com/mstorsjo/fdk-aac.git /usr/src/libfdk-aac
+      shell: git clone https://github.com/mstorsjo/fdk-aac.git /usr/src/libfdk-aac
       args:
           creates: /usr/src/libfdk-aac
     - name: autoconf libfdk-aac
-      command: autoreconf -fiv
+      shell: autoreconf -fiv
       args:
           chdir: /usr/src/libfdk-aac
           creates: /usr/src/libfdk-aac/configure
     - name: configure libfdk-aac
-      command: /usr/src/libfdk-aac/configure --prefix=/usr/local --disable-shared
+      shell: /usr/src/libfdk-aac/configure --prefix=/usr/local --disable-shared
       args:
           chdir: /usr/src/libfdk-aac
           creates: /usr/src/libfdk-aac/libtool
     - name: compile libfdk-aac
-      command: make -j2
+      shell: make -j2
       args:
           chdir: /usr/src/libfdk-aac
           creates: /usr/src/libfdk-aac/libFDK/src/FDK_core.o
     - name: install libfdk-aac
-      command: make install
+      shell: make install
       args:
           chdir: /usr/src/libfdk-aac
           creates: /usr/local/lib/libfdk-aac.a
@@ -81,17 +81,17 @@
           chdir: /usr/src
           creates: /usr/src/libvpx-1.4.0
     - name: configure libvpx
-      command: ./configure --prefix=/usr/local --disable-examples --disable-unit-tests
+      shell: ./configure --prefix=/usr/local --disable-examples --disable-unit-tests
       args:
           chdir: /usr/src/libvpx-1.4.0
           creates: /usr/src/libvpx-1.4.0/Makefile
     - name: compile libvpx
-      command: make -j2
+      shell: make -j2
       args:
           chdir: /usr/src/libvpx-1.4.0
           creates: /usr/src/libvpx-1.4.0/libvpx.a
     - name: install libvpx
-      command: make install
+      shell: make install
       args:
           chdir: /usr/src/libvpx-1.4.0
           creates: /usr/local/lib/libvpx.a
@@ -109,17 +109,17 @@
         --enable-gpl --enable-version3 --enable-nonfree \
         --enable-libass --enable-libfdk-aac --enable-libfreetype --enable-libmp3lame \
         --enable-libopus --enable-libtheora --enable-libvorbis --enable-libvpx \
-        --enable-libx264 --enable-libx265
+        --enable-libx264
       args:
           chdir: /usr/src/ffmpeg
           creates: /usr/src/ffmpeg/config.asm
     - name: compile ffmpeg
-      command: make -j2
+      shell: make -j2
       args:
           chdir: /usr/src/ffmpeg
           creates: /usr/src/ffmpeg/ffmpeg
     - name: install ffmpeg
-      command: make install
+      shell: make install
       args:
           chdir: /usr/src/ffmpeg
           creates: /usr/local/bin/ffmpeg
