--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -31,49 +31,50 @@
     # dependent libraries
     # libx265
     - name: clone libx265
-      shell: hg clone https://bitbucket.org/multicoreware/x265 /usr/src/x265
+      command: hg clone https://bitbucket.org/multicoreware/x265 /usr/src/x265
       args:
           creates: /usr/src/x265
+    - name: update libx265
+      command: hg pull -u
+      args:
+          chdir: /usr/src/x265
     - name: configure libx265
-      shell: cmake -G "Unix Makefiles" -DCMAKE_INSTALL_PREFIX=/usr/local -DENABLED_SHARED:bool=off ../../source
+      command: cmake -G "Unix Makefiles" -DCMAKE_INSTALL_PREFIX=/usr/local -DENABLED_SHARED:bool=off ../../source
       args:
           chdir: /usr/src/x265/build/linux
-          creates: /usr/src/x265/build/linux/Makefile
     - name: compile libx265
-      shell: make -j2
+      command: make -j2
       args:
           chdir: /usr/src/x265/build/linux
-          creates: /usr/src/x265/build/linux/x265
     - name: install libx265
-      shell: make install
+      command: make install
       args:
           chdir: /usr/src/x265/build/linux
-          creates: /usr/local/bin/x265
     # libfdk-aac
     - name: clone libfdk-aac
-      shell: git clone https://github.com/mstorsjo/fdk-aac.git /usr/src/libfdk-aac
+      command: git clone https://github.com/mstorsjo/fdk-aac.git /usr/src/libfdk-aac
       args:
           creates: /usr/src/libfdk-aac
+    - name: update libfdk-aac
+      command: git pull origin master
+      args:
+          chdir: /usr/src/libfdk-aac
     - name: autoconf libfdk-aac
-      shell: autoreconf -fiv
+      command: autoreconf -fiv
       args:
           chdir: /usr/src/libfdk-aac
-          creates: /usr/src/libfdk-aac/configure
     - name: configure libfdk-aac
-      shell: /usr/src/libfdk-aac/configure --prefix=/usr/local --disable-shared
+      command: /usr/src/libfdk-aac/configure --prefix=/usr/local --disable-shared
       args:
           chdir: /usr/src/libfdk-aac
-          creates: /usr/src/libfdk-aac/libtool
     - name: compile libfdk-aac
-      shell: make -j2
+      command: make -j2
       args:
           chdir: /usr/src/libfdk-aac
-          creates: /usr/src/libfdk-aac/libFDK/src/FDK_core.o
     - name: install libfdk-aac
-      shell: make install
+      command: make install
       args:
           chdir: /usr/src/libfdk-aac
-          creates: /usr/local/lib/libfdk-aac.a
     # libvpx
     - name: download libvpx
       shell: wget -O - https://storage.googleapis.com/downloads.webmproject.org/releases/webm/libvpx-1.4.0.tar.bz2 | tar xjvf -
@@ -81,45 +82,48 @@
           chdir: /usr/src
           creates: /usr/src/libvpx-1.4.0
     - name: configure libvpx
-      shell: ./configure --prefix=/usr/local --disable-examples --disable-unit-tests
+      command: ./configure --prefix=/usr/local --disable-examples --disable-unit-tests
       args:
           chdir: /usr/src/libvpx-1.4.0
           creates: /usr/src/libvpx-1.4.0/Makefile
     - name: compile libvpx
-      shell: make -j2
+      command: make -j2
       args:
           chdir: /usr/src/libvpx-1.4.0
           creates: /usr/src/libvpx-1.4.0/libvpx.a
     - name: install libvpx
-      shell: make install
+      command: make install
       args:
           chdir: /usr/src/libvpx-1.4.0
           creates: /usr/local/lib/libvpx.a
     # ffmpeg itself
     - name: download ffmpeg
-      shell: wget -O - "https://ffmpeg.org/releases/ffmpeg-snapshot.tar.bz2" | tar xjvf -
+      command: git clone https://github.com/ffmpeg/ffmpeg.git /usr/src/ffmpeg
       args:
           chdir: /usr/src
           creates: /usr/src/ffmpeg
+    - name: update ffmpeg
+      command: git pull origin master
+      args:
+          chdir: /usr/src/ffmpeg
     - name: configure ffmpeg
-      shell: PKG_CONFIG_PATH=/usr/local/lib/pkgconfig /usr/src/ffmpeg/configure \
+      command: /usr/src/ffmpeg/configure \
         --prefix=/usr/local \
         --pkg-config-flags='--static' \
         --bindir=/usr/local/bin \
         --enable-gpl --enable-version3 --enable-nonfree \
         --enable-libass --enable-libfdk-aac --enable-libfreetype --enable-libmp3lame \
         --enable-libopus --enable-libtheora --enable-libvorbis --enable-libvpx \
-        --enable-libx264
+        --enable-libx264 --enable-libx265
       args:
           chdir: /usr/src/ffmpeg
-          creates: /usr/src/ffmpeg/config.asm
     - name: compile ffmpeg
-      shell: make -j2
+      command: make -j2
       args:
           chdir: /usr/src/ffmpeg
-          creates: /usr/src/ffmpeg/ffmpeg
     - name: install ffmpeg
-      shell: make install
+      command: make install
       args:
           chdir: /usr/src/ffmpeg
-          creates: /usr/local/bin/ffmpeg
+    - name: update ldconfig
+      command: ldconfig
